Fix spacing for mobile browser

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -35,6 +35,7 @@ strong {
   height: 24px;
   position: absolute;
   top: 17px;
+  margin-left: 0.6em;
 }
 
 .profile {
@@ -66,6 +67,16 @@ strong {
 }
 
 @include media-breakpoint-down(md) {
+  #front-page{
+    .lead {
+      font-size: 0.9rem;
+    }
+
+    .description {
+      font-size: 0.8rem;
+    }
+  }
+
   .navbar-collapse {
     position: absolute;
     top: 3.5em;
@@ -133,6 +144,8 @@ strong {
 
 .two-third {
   padding-bottom: 80px;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 @include media-breakpoint-up(lg) {
